dist/docs/3.2.0-beta.0/trusted-match/context-and-identity.mdx
---
title: Context Match and Identity Match
description: The two operations at the heart of TMP, how they work, and how the publisher joins them at decision time.
"og:title": "AdCP Context Match and Identity Match"
---

# Context Match and Identity Match

TMP defines two operations. They are independent by design — processed in separate infrastructure, carrying different data, answering different questions. The publisher joins their results to make the final activation decision.

This page walks through both operations and the join using a concrete example.

## The Scenario

A retail publisher has three active AdCP media buys from a buyer agent. Each media buy contains packages:

- **Package A**: Sponsored products — coffee brands, carousel format, available on search and category pages
- **Package B**: Homepage takeover — premium display, available on the homepage only
- **Package C**: Seasonal promotion — iced beverages, native format, available site-wide during summer

A shopper searches for "best cold brew." The publisher's search results page loads.

## Context Match

The publisher sends a Context Match request to the TMP Router, which fans out to each buyer's agent. The request contains the page context. It contains no user identity and no package list — the buyer agent uses its synced package set for this placement.

### What the publisher sends

```json
{
  "type": "context_match_request",
  "request_id": "ctx-7f3a",
  "property_rid": "01916f3a-7b2c-7000-8000-000000000001",
  "property_id": "retailer-web",
  "property_type": "website",
  "placement_id": "search-results-grid",
  "seller_agent_url": "https://retailer.example",
  "artifact_refs": [
    { "type": "custom", "value": "search:beverages-coffee" }
  ],
  "context_signals": {
    "topics": ["632"],
    "keywords": ["cold brew", "iced coffee", "coffee beans"],
    "sentiment": "positive",
    "summary": "Shopper searching for cold brew coffee products"
  },
  "geo": { "country": "US", "region": "US-CA" }
}
```

The buyer agent sees what the page is about — coffee, positive purchase intent, California — and evaluates its packages against that context. Note what is absent: no user ID, no device information, no session token, no IP address.

### What the buyer responds

The buyer agent evaluates each package against the context. Package B is homepage-only, so it does not match a search results page. Packages A and C match. The buyer returns an offer for each.

```json
{
  "status": "completed",
  "type": "context_match_response",
  "request_id": "ctx-7f3a",
  "offers": [
    {
      "package_id": "pkg-A",
      "brand": { "domain": "bluebottle.example.com", "brand_id": "blue_bottle" },
      "summary": "Cold brew coffee carousel — featuring top-rated blends",
      "creative_manifest": {
        "format_kind": "sponsored_placement",
        "assets": {
          "source_catalog": {
            "asset_type": "catalog",
            "catalog_id": "bluebottle-products"
          }
        }
      },
      "creative_data": {
        "sponsor_label": "Sponsored by Blue Bottle"
      }
    },
    {
      "package_id": "pkg-C",
      "summary": "Free shipping on iced beverages — summer promotion",
      "price": { "amount": 0, "currency": "USD", "model": "flat" },
      "creative_manifest": {
        "format_kind": "native_in_feed",
        "assets": {
          "title": { "asset_type": "text", "content": "Free shipping on iced beverages" },
          "body_text": { "asset_type": "text", "content": "Summer promotion — order any iced beverage and get free delivery." },
          "landing_page_url": { "asset_type": "url", "url": "https://shop.example.com/promo/summer-iced" }
        }
      }
    }
  ],
  "signals": {
    "segments": ["coffee_enthusiast", "high_purchase_intent"],
    "targeting_kvs": [
      { "key": "category_affinity", "value": "beverages" },
      { "key": "seasonal_relevance", "value": "high" }
    ]
  }
}
```

The buyer returns an offer per matched package. Each offer carries a `package_id` and optionally a `brand`, `price`, `summary`, `creative_manifest`, and `creative_data`. The `summary` gives the publisher enough to judge relevance. When the creative manifest is present inline, the publisher has everything needed to render. For large creatives (e.g., VAST video), the manifest references external assets via URLs rather than embedding them. This provider-hop response validates against `provider-context-match-response.json`. Targeting pairs use `signals.targeting_kvs`; the router preserves them unchanged under `signals_by_provider[provider_id].targeting_kvs` in the `context-match-response.json` shape returned to the publisher.

### What Context Match never carries

- User IDs (hashed or otherwise)
- Device identifiers
- Session tokens
- IP addresses
- Any data that could identify a specific user

This is not a policy restriction. It is enforced by the router's context code path, which has no access to identity data — no shared memory, no shared state, no communication channel to the identity code path. [TEE attestation](/dist/docs/3.2.0-beta.0/trusted-match/privacy-architecture) can make this separation independently verifiable.

## Identity Match

Separately — and with a random delay and random ordering, so the two requests can't be paired by timing or by which arrives first — the publisher sends an Identity Match request to the TMP Router, which fans out to each buyer's agent. The request contains the publisher's `seller_agent_url` and an identity token; the buyer resolves the active package set from `seller_agent_url`, or evaluates against the explicit `package_ids` list when the publisher sends one. The request contains no page context.

### What the publisher sends

```json
{
  "type": "identity_match_request",
  "request_id": "id-9b2c",
  "seller_agent_url": "https://publisher.example",
  "identities": [
    { "user_token": "tok_hk82mfp1", "uid_type": "uid2" },
    { "user_token": "ID5*aB3xY...", "uid_type": "id5" },
    { "user_token": "a1b2c3d4e5f6...", "uid_type": "hashed_email" }
  ],
  "consent": {
    "gdpr": true,
    "tcf_consent": "CPx2XYZABC..."
  },
  "package_ids": ["pkg-A", "pkg-B", "pkg-C"]
}
```

Each entry in `identities` is a `{user_token, uid_type}` pair. The publisher SHOULD include every token they have available — buyers resolve on whichever graph matches, and sending more tokens maximizes match rate without leaking additional page context. Each `user_token` comes from an existing identity provider (ID5, LiveRamp, UID2) or is publisher-generated. The `uid_type` tells the buyer which identity graph to resolve against, avoiding trial-and-error matching. The `consent` object carries the user's consent signal — buyers in regulated jurisdictions MUST NOT process the tokens without it. Tokens are opaque to the buyer — the buyer can map them to their own identity graph (if they have a match), but cannot reverse them to PII or correlate with any page context.

Note what is absent: no URL, no search query, no content signals, no topic IDs. The buyer agent evaluates this request based purely on user identity and package eligibility.

### What the buyer responds

```json
{
  "type": "identity_match_response",
  "request_id": "id-9b2c",
  "eligible_package_ids": ["pkg-A", "pkg-B"],
  "serve_window_sec": 60,
  "tmpx": "k1.dG1weC1leGFtcGxlLWVuY3J5cHRlZC10b2tlbi4uLg"
}
```

The buyer reports that this user is eligible for packages A and B. Package C is absent — the user is not eligible. The publisher does not need to know why — frequency capping, audience mismatch, and other disqualification reasons are buyer-internal.

The `serve_window_sec: 60` tells the router: "Cache this for 60 seconds." The router uses this cached eligibility to fill whatever placements exist — a single slot, a CTV ad pod, or a page with multiple ad units — without re-querying the buyer. The publisher decides how to allocate across placements.

### What Identity Match never carries

- Page URLs
- Content hashes
- Search queries
- Topic IDs
- Content ratings
- Any data that could identify what the user is looking at

This is enforced by the router's identity code path, which has no access to context data — no shared memory, no shared state, no communication channel to the context code path. TEE attestation can make this separation independently verifiable.

## The Publisher-Side Join

The publisher now has two independent responses. They join them on their own infrastructure — neither the buyer agents nor the router see the joined result.

```
For each offer from Context Match:

  pkg-A:
    Context says: offer for cold brew carousel (creative manifest inline)
    Identity says: eligible (in eligible_package_ids)
    → Accept the offer. Render using the inline creative manifest.
    → Apply "coffee_enthusiast" segment to ad server targeting.

  pkg-C:
    Context says: offer for iced beverage promotion
    Identity says: not eligible (absent from eligible_package_ids)
    → Skip this offer for this user.

Result: Accept Package A.
Resolve the provider-attributed targeting tuples through the publisher's [`targeting_kv_mapping`](/dist/docs/3.2.0-beta.0/trusted-match/specification#publisher-targeting-kv-mapping), then set the mapped ad-server keys. Drop any tuple without a mapping.
```

The publisher already knows how to render Package A — it maps to a sponsored carousel slot. The inline creative manifest carries the catalog items and assets needed. The publisher handled the rest.

## The Offer Model

TMP's response model is the offer. An offer carries a `package_id` (required) and optional fields: `brand`, `price`, `summary`, `creative_manifest`, and `creative_data` (a key-value map for dynamic rendering values).

**Simple case (GAM/Prebid)**: The offer carries `package_id`. The provider may return a provider-local package targeting pair in `signals.targeting_kvs`; the router attributes it in `signals_by_provider`, and the publisher maps `(provider_id, key)` to its GAM key for line item matching. The optional `creative_data` map carries package-local presentation enhancements (e.g., sponsor labels or promo text); it is not an ad-server macro namespace. There are no protocol-required keys: publishers ignore unknown keys, and missing keys do not invalidate an otherwise renderable offer.

**Rich case (AI assistants, dynamic retail)**: The offer includes a `summary` ("50% off cold brew — recipe integration") so the publisher can judge relevance, and an inline `creative_manifest` with everything needed to render. For large creatives (e.g., VAST video), the manifest references external assets via URLs rather than embedding the full payload.

**Dynamic brands**: When the product supports `dynamic_brands`, the buyer can include a `brand` on the offer, selecting from their portfolio at match time rather than being locked to a pre-configured package brand.

**Variable pricing**: When the product supports variable pricing, the buyer can include a `price` on the offer.

The creative manifest carries catalog items, text, images, and everything else required for rendering. Optional `creative_data` may enhance that presentation but cannot replace required manifest assets. This reuses the existing CreativeManifest schema.

Per-user exposure tracking flows through the TMPX macro — an encrypted token from Identity Match that the publisher substitutes into creative tracking URLs. The buyer's impression pixel decrypts the token and logs per-user exposures in real time. Aggregate delivery reporting via `get_media_buy_delivery` provides reconciliation and pacing data.

## Enrichment Signals

Context Match responses can include enrichment signals alongside package activation:

- **Segments**: Audience or contextual segments (e.g., "coffee_enthusiast", "high_purchase_intent") that flow into the publisher's ad server as targeting signals.
- **Targeting key-values**: Provider-local key-value pairs (e.g., `category_affinity=beverages`). The router attributes them under the provider's registered `provider_id`; the publisher maps `(provider_id, key)` to its local destination before using the value for line item targeting, reporting breakdowns, or real-time decisioning. Unmapped tuples are dropped.

Enrichment signals are additive — they are not tied to specific packages. A buyer agent might return enrichment signals even when it activates no packages, providing value as a data provider rather than a demand source.

This is how existing RTD (Real-Time Data) modules work today. TMP unifies enrichment and package activation into a single protocol, so a buyer agent can do both in one response.

## Package List Management

Identity Match sends ALL active package IDs for a given buyer — not just those that matched in Context Match. This is intentional: it prevents the buyer from correlating which packages matched the page content. If the buyer only received packages that matched a hiking article, they'd know the user was reading about hiking.

Package lists update when new media buys are created via `create_media_buy`. The router maintains the active package list per buyer, derived from the buyer's media buy history with the publisher.

In Context Match, the optional `package_ids` field can narrow evaluation when the publisher has a specific reason — for example, CTV pod composition where only video packages apply. This does not affect Identity Match: when Identity Match sends `package_ids`, the composition must be independent of the current placement (all-active or fuzzed), not the placement-specific subset.

Stale packages from expired or cancelled media buys should be removed from the active list within 1 hour. The router is responsible for this cleanup.
